<resources>
    <string name="app_name">NTU_TimeTable</string>
    <string name="login_email_hint">Email</string>
    <string name="login_password_hint">Password</string>
    <string name="register_btn">Register</string>
    <string name="invalid_email_or_password">Invalid Email or Password!!</string>

    <!--    Menu strings-->
    <string name="category">Category</string>
    <string name="nav_main_tittle">Main</string>
    <string name="nav_user_tittle">Users</string>
    <string name="nav_user_create">Create User</string>
    <string name="user_view">Profile</string>
    <string name="tittle_profile">Profile</string>
    <string name="nav_user_credentials">Credentials</string>
    <string name="nav_user_password_reset">Password Reset</string>
    <string name="create_timetable">Create Timetable</string>
    <string name="new_category_create">New Category</string>
    <string name="nav_logout">Logout</string>
    <string name="view_categories">View Categories</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <!-- TODO: Time table form string -->

    <string name="moduleId">Module</string>
    <string name="day">Day</string>
    <string name="startTime">Start Time</string>
    <string name="select">Select</string>
    <string name="endTime">End Time</string>
    <string name="location">Loction</string>
    <string name="type">Type</string>
    <string name="Submit">Submit</string>
    <string name="lecturer">Lecturer</string>
    <string name="date">Date</string>
    <string name="username_icon_description">Username Icon</string>
    <string name="checkString">Do you want to repeat all the weeks?</string>
    <string name="termStartDate">Term Start Date</string>
    <string name="termEndDate">Term End Date</string>
    <string name="batchNumber">Batch Number</string>

    <!-- TODO: User Resistration -->
    <string name="firstname">Firstname</string>
    <string name="lastname">Lastname</string>
    <string name="email">Email</string>
    <string name="universityid">University ID</string>
    <string name="userRole">Please select the user role</string>
    <string name="user_register">User Registration</string>
    <string name="degreeLevel">Degree Level</string>
    <string name="course">Course</string>
    <string name="credit_score">Credit Score</string>
    <string name="publish_date">Publish Date</string>
    <string name="publish_time">Publish Time</string>
    <string name="submission_date">Submission Date</string>
    <string name="submission_time">Submission Time</string>
    <string name="assessment_schedule">Assessment Schedule</string>
    <string name="view_assessment">View Assessment</string>
    <string name="current_password">Current Password</string>
    <string name="change_password">Change Password</string>
    <string name="new_password">New Password</string>
</resources>