<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".TimeTableCreateFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_margin="20dp">
        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:startIconContentDescription="@string/batchNumber"
            android:id="@+id/batchNumberBorder"
            android:layout_marginTop="10dp">

            <AutoCompleteTextView
                android:id="@+id/batchId"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="none"
                android:hint="@string/batchNumber"
                />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:startIconContentDescription="@string/moduleId"
            android:id="@+id/courseBorder">

            <AutoCompleteTextView
                android:id="@+id/module"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/moduleId"
                android:inputType="none"
                tools:ignore="TextContrastCheck,TextContrastCheck" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:startIconContentDescription="@string/lecturer"
            android:id="@+id/lecturerBorder">

            <AutoCompleteTextView
                android:id="@+id/lecturerId"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/lecturer"
                android:inputType="none"
                tools:ignore="TextContrastCheck,TextContrastCheck" />
        </com.google.android.material.textfield.TextInputLayout>



        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/date"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/date"

                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                app:startIconContentDescription="@string/username_icon_description"
                >

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/datePicker"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="text" />

            </com.google.android.material.textfield.TextInputLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/startTime"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/startTime"

                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                app:startIconContentDescription="@string/username_icon_description"
                >
                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/startTimePicker"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="text"
                    />

            </com.google.android.material.textfield.TextInputLayout>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/endTime"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/endTime"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                app:startIconContentDescription="@string/username_icon_description"
                >
                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/endTimePicker"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="text"
                    />

            </com.google.android.material.textfield.TextInputLayout>

        </LinearLayout>

        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:startIconContentDescription="@string/type"
            android:id="@+id/typeBorder">

            <AutoCompleteTextView
                android:id="@+id/type"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/type"
                android:inputType="none"
                tools:ignore="TextContrastCheck,TextContrastCheck" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout

            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/location"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            app:startIconContentDescription="@string/username_icon_description"
            >

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/location"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text"
                android:textColor="@color/placeHolder"

                />

        </com.google.android.material.textfield.TextInputLayout>

        <CheckBox
            android:id="@+id/repeat"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/checkString"/>
        <LinearLayout

            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:id="@+id/repeatBorder"
            android:visibility="gone">


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <com.google.android.material.textfield.TextInputLayout

                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/termStartDate"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    app:startIconContentDescription="@string/username_icon_description"
                    >
                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/termStartDate"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="text"
                        />

                </com.google.android.material.textfield.TextInputLayout>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <com.google.android.material.textfield.TextInputLayout

                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/termEndDate"

                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    app:startIconContentDescription="@string/username_icon_description"
                    >
                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/termEndDate"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="text"
                        />

                </com.google.android.material.textfield.TextInputLayout>
            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btnSubmit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Submit"
                android:backgroundTint="@color/btnColor"
                style="@style/Widget.MaterialComponents.Button.Icon"
                />

        </LinearLayout>



    </LinearLayout>

</ScrollView>