<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".TimeTableCreateFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_margin="20dp">

        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:startIconContentDescription="@string/moduleId"
            android:id="@+id/courseBorder">

            <AutoCompleteTextView
                android:id="@+id/module"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/moduleId"
                android:inputType="none"
                 />
        </com.google.android.material.textfield.TextInputLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/creditsText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/credit_score"

                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                app:startIconContentDescription="@string/username_icon_description"
                >

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/credit"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="text" />

            </com.google.android.material.textfield.TextInputLayout>

        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/publishedDateText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/publish_date"

                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                app:startIconContentDescription="@string/username_icon_description"
                >

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/publishedDate"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="text" />

            </com.google.android.material.textfield.TextInputLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/publishTimeText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/publish_time"

                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                app:startIconContentDescription="@string/username_icon_description"
                >
                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/publishTime"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="text"
                    />

            </com.google.android.material.textfield.TextInputLayout>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/dueDateText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/submission_date"

                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                app:startIconContentDescription="@string/username_icon_description"
                >

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/dueDate"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="text" />

            </com.google.android.material.textfield.TextInputLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/dueTimeText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/submission_time"

                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                app:startIconContentDescription="@string/username_icon_description"
                >
                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/dueTime"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="text"
                    />

            </com.google.android.material.textfield.TextInputLayout>
        </LinearLayout>

        <LinearLayout

            android:id="@+id/repeatBorder"
            android:layout_width="4dp"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:visibility="gone">

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btnSubmit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Submit"
                android:backgroundTint="@color/btnColor"
                style="@style/Widget.MaterialComponents.Button.Icon"
                />

        </LinearLayout>



    </LinearLayout>

</ScrollView>