<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">
    <item
        android:id="@+id/nav_home"
        android:icon="@drawable/ic_baseline_home_24"
        android:title="Home" />

    <item android:title="Timetable">
        <menu>
            <group android:checkableBehavior="single">
                <item
                    android:id="@+id/nav_view_timetable"
                    android:icon="@drawable/ic_baseline_calendar_month_24"
                    android:title="View Timetable" />
            </group>
        </menu>
    </item>
    <item android:title="Assignment">
        <menu>
            <group android:checkableBehavior="single">
                <item
                    android:id="@+id/nav_view_assignment"
                    android:icon="@drawable/ic_baseline_laptop_24"
                    android:title="View Assignment" />
            </group>
        </menu>
    </item>
    <item android:title="Users">
        <menu>
            <group android:checkableBehavior="single">
                <item
                    android:id="@+id/nav_register"
                    android:icon="@drawable/ic_baseline_person_24"
                    android:title="Register Users" />
                <item
                    android:id="@+id/nav_view_users"
                    android:icon="@drawable/ic_baseline_person_24"
                    android:title="View Users" />
            </group>
        </menu>
    </item>
    <item android:title="Profile">
        <menu>
            <group android:checkableBehavior="single">
                <item
                    android:id="@+id/nav_profile"
                    android:icon="@drawable/ic_baseline_person_24"
                    android:title="Profile" />
            </group>
        </menu>
    </item>
    <item android:title="@string/nav_user_credentials">
        <menu>
            <group android:checkableBehavior="single">
                <item
                    android:id="@+id/nav_password_change"
                    android:icon="@drawable/ic_baseline_password_24"
                    android:title="@string/nav_user_password_reset" />
            </group>
        </menu>
    </item>
    <item android:title="@string/nav_logout">
        <menu>
            <group android:checkableBehavior="single">
                <item
                    android:id="@+id/logout"
                    android:icon="@drawable/ic_baseline_logout_24"
                    android:title="@string/nav_logout" />
            </group>
        </menu>
    </item>
</menu>